# dicoding

./: .gitignore
Android/DicodingEventApp/: settings.gradle.kts
Android/FirstAndroid/: settings.gradle.kts
Back-End/Notes-App/: index.html
ETL-Pipeline-Anas/submission-etl-anas/: .gitignore  requirements.txt
Kotlin-dasar/1001/: install.md  run.kt
Machine-Learning/BMLP_Anas-Azhar/: PCA_model_clustering.h5  [Klasifikasi]_Submission_Akhir_BMLP_Anas_Azhar.ipynb  data_clustering.csv
Machine-Learning/BMLP_Anas-Azhar-01/: [Clustering]_Submission_Akhir_BMLP_Anas_Azhar.ipynb  data_clustering_inverse.csv  decision_tree_model.h5  explore_random_forest_classification.h5  model_clustering.h5
Machine-Learning/BMLP_Anas-Azhar-02/: [Clustering]_Submission_Akhir_BMLP_Anas_Azhar.ipynb  [Klasifikasi]_Submission_Akhir_BMLP_Anas_Azhar.ipynb  data_clustering.csv  data_clustering_inverse.csv  decision_tree_model.h5  explore_random_forest_classification.h5  model_clustering.h5  tuning_classification.h5
Machine-Learning/ETL-Pipeline-Anas/submission-etl-anas/: README.md  docker-compose.yml  main.py  products.csv  pyproject.toml
Machine-Learning/ETL-Pipeline-Anas/submission-etl-anas/tests/: conftest.py
Machine-Learning/ETL-Pipeline-Anas/submission-etl-anas/utils/: config.py  extract.py  transform.py
MiniPokedex/app/: build.gradle.kts
MiniPokedex/gradle/: libs.versions.toml
MultiPlatform-Dart/a191-dart-code-submission/: pubspec.yaml
Pahlawanku-project-basic/: settings.gradle.kts
Pahlawanku-project-basic/app/: build.gradle.kts
Rust-dasar/unitconv/: Cargo.toml  (+2 more)
(+151 files in other folders)
